--- a/Code/Example/Finite_Automata/makefile
+++ b/Code/Example/Finite_Automata/makefile
@@ -1,2 +1,11 @@
-edit:main.o finite.o
-	g++ -std=c++17 
+objects = main.o  finite.o
+edit : $(objects)
+	g++ -std=c++17 $(objects) -o edit
+
+main.o : main.cpp finite_automata.h
+finite : finite.cpp finite_automata.h
+
+.PHONY:clear
+clear:
+	rm *.o edit
+	
